--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9,6 +9,7 @@
 
 
 
+
 #menu-0 .mbr-brand__name {
   font-size: 16px;
 }
@@ -54,6 +55,11 @@
   color: #ffffff;
   font-family: 'Oswald', sans-serif;
   font-size: 18px;
+}
+#social-buttons2-8 .mbr-header__text DIV {
+  text-align: left;
+  font-family: 'Oswald', sans-serif;
+  font-size: 25px;
 }
 #footer1-4 P {
   text-align: center;
