--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -20,7 +20,7 @@
   background: #27aae0;
 }
 #menu-0 .mbr-navbar__hamburger {
-  color: #000000;
+  color: #2969b0;
 }
 #menu-0 .mbr-navbar__items a {
   font-family: 'Oswald', sans-serif;
